# webmanifest

./: CHANGELOG.md  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
examples/: main.rs
src/: direction.rs  display_mode.rs  icon.rs  lib.rs  orientation.rs  related.rs
tests/: test.rs
tests/fixtures/: manifest-1.json
