[package]
name = "webmanifest"
version = "1.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-net-web/webmanifest"
documentation = "https://docs.rs/webmanifest"
description = "Create a manifest.webmanifest file"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
serde = "1.0.79"
serde_derive = "1.0.79"
mime_guess = "2.0.0-alpha.6"
serde_json = "1.0.32"
failure = "0.1.2"
